# vidpipe

./: .flake8  .gitignore  CONTRIBUTING.md  EXPERT_REVIEW.md  GITHUB_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCT_ANALYSIS_AGENT.md  PRODUCT_MARKET_ANALYSIS.json  PRODUCT_MARKET_ANALYSIS.md  README.md  SECURITY.md  TECHNICAL_ANALYSIS.md  TODO.md  USAGE_GUIDE.md  example_vidpipe_analysis.py  main.py  package-lock.json  package.json  product_analysis_cli.py  pyproject.toml  requirements.txt  test-analysis.md  test_vidpipe.py  tsconfig.json  web_server.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependencies.yml  product-analysis.yml  release.yml
archive/: CLAUDE.md  Makefile  README.md  camera.c  camera.cpp  camera_av.m  functions.c  lexer.c  main.c  parser.c  runtime.c  vidpipe  vidpipe.h
archive/demo.dSYM/Contents/Resources/DWARF/: demo
archive/demo.dSYM/Contents/Resources/Relocations/aarch64/: demo.yml
archive/examples/: advanced-motion-tracking.vp  buffered.vp  camera_demo.vp  camera_live.vp  complex.vp  corner-detection-live.vp  loops.vp  parallel-cv-processing.vp  parallel.vp  simple.vp
docs/: architecture_overview.md  computer_vision_pipeline_texts.md  index.html  language_reference.md  main.js  project_status.md  web-editor.js  web_interface.md
examples/: README.md  advanced_processing.vp  basic_filters.vp  comprehensive_demo.vp  creative_fun.vp  debugging_testing.vp  input_sources.vp  language_features.vp  modular_pipelines.vp  multi_pipeline_demo.vp  multi_processing.vp  output_recording.vp  pipeline_patterns.vp  real_world_apps.vp  recording.vp  showcase.vp  simple.vp  test_pattern.vp  with_parameters.vp
gui/: __init__.py  function_browser.py  main_window.py  pipeline_editor.py  pipeline_visualizer.py
product_analysis/: __init__.py  analyzers.py  collectors.py  core.py  generators.py  github_integration.py  templates.py
src/: main.ts  web-editor.ts
tests/: test_function_registry.py  test_function_registry_comprehensive.py  test_language_components.py  test_lexer_comprehensive.py  test_parser_comprehensive.py  test_product_analysis.py  test_runtime_comprehensive.py
vidpipe/: __init__.py  ast_nodes.py  cli.py  functions.py  gui_main.py  lexer.py  multi_pipeline.py  parser.py  pipeline.py  runtime.py  tokens.py
