[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vidpipe"
dynamic = ["version"]
description = "A composable functional pipeline language for real-time video processing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VidPipe Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.2.0",
]
dev = [
    "pytest>=6.0.0",
    "pytest-qt>=4.0.0",
    "black",
    "isort", 
    "flake8",
    "mypy",
]
all = [
    "vidpipe[gui,dev]",
]

[project.urls]
Homepage = "https://github.com/yossideutsch1973/vidpipe"
Repository = "https://github.com/yossideutsch1973/vidpipe"
Issues = "https://github.com/yossideutsch1973/vidpipe/issues"
Documentation = "https://github.com/yossideutsch1973/vidpipe/tree/main/docs"

[project.scripts]
vidpipe = "vidpipe.cli:main"
vidpipe-gui = "vidpipe.gui_main:main"

[tool.setuptools]
packages = ["vidpipe", "vidpipe.gui"]

[tool.setuptools_scm]
write_to = "vidpipe/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["vidpipe"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "gui: marks tests that require GUI components",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["vidpipe"]
omit = [
    "*/tests/*",
    "*/test_*",
    "vidpipe/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]